@startuml
'https://plantuml.com/class-diagram


class Employee
class BaseEmployee
class CommissionEmployee
class HourlyEmployee
class SalariedEmployee

Employee <|-- BaseEmployee
Employee <|-- CommissionEmployee
Employee <|-- HourlyEmployee
Employee <|-- SalariedEmployee


class Employee {
 - firstName : String
 - lastName : String
 - socialSecurityNumber : String

 + getFirstName() : String
 + setFirstName(firstName : String ) : void
 + getLastName() : String
 + setLastName(lastName : String ) : void
 + getSocialSecurityNumber() : String
 + setSocialSecurityNumber(socialSecurityNumber : String) : void
 + toString() : String
}

class HourlyEmployee{
- wage: Double
- numberOfHoursWorked : int

+ getWage() : Double
+ setWage(wage : Double) : void
+ getNumberOfHoursWorked() : int
+ setNumberOfHoursWorked(numberOfHoursWorked :int) : void
+ toString() : String
}

class CommissionEmployee{
- commissionRate: Double
- grossSales : Double

+ getCommissionRate() : Double
+ setCommissionRate(commissionRate : Double) : void
+ getGrossSales() : Double
+ setGrossSales(grossSales : Double) : void
+ toString() : String
}

class SalariedEmployee{
 -weeklySalary : Double

+getWeeklySalary()
+setWeeklySalary(Double weeklySalary) : void
+ toString() : String
}

class BaseEmployee{
 -baseSalary : Double
 +getBaseSalary(): Double
 +setBaseSalary(Double weeklySalary) : void
 +toString() : String
}

@enduml